# election

./: .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  firebase.json  firestore.indexes.json  firestore.rules
.firebase/: hosting.ZnJvbnRlbmRcZGlzdA.cache
.github/workflows/: backend-test.yml  deploy.yml  e2e.yml
backend/: .env.example  Dockerfile  cloudbuild.yaml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  seed_data.py
backend/app/: config.py  limiter.py
backend/app/middleware/: auth.py
backend/app/models/: __init__.py  chat.py  feedback.py  progress.py  quiz.py  timeline.py  topic.py  user.py
backend/app/routes/: chat.py  feedback.py  quiz.py  timeline.py  topics.py  user.py
backend/app/services/: assistant_service.py  auth_service.py  dialogflow_service.py  firestore_service.py
backend/tests/: conftest.py  test_assistant_service.py  test_auth.py  test_chat.py  test_dialogflow_service.py  test_quiz.py  test_topics.py
docs/: 100_PERCENT_ROADMAP_PART_1_CODE_TESTING.md  100_PERCENT_ROADMAP_PART_2_SEC_ACCESSIBILITY.md  AI_EVALUATION_SCORE_MAXIMIZATION_REPORT.md  CONTENT_GUIDE.md  DEPLOYMENT.md
docs/dialogflow-agent/: README.md
frontend/: .env.example  .eslintrc.json  .prettierignore  index.html  package-lock.json  package.json  playwright.config.js  tailwind.config.js  vite.config.js
frontend/e2e/: accessibility.spec.js  chat.spec.js  home.spec.js  profile.spec.js  quiz.spec.js  timeline.spec.js  topics.spec.js
frontend/public/: manifest.json
frontend/src/: App.jsx  firebase.js  index.css  main.jsx  test-setup.js
frontend/src/__mocks__/: firebase.js
frontend/src/__tests__/: AccessibilityStatement.test.jsx  AnalyticsService.test.js  ApiService.test.js  App.test.jsx  AuthContext.test.jsx  Button.test.jsx  ChatWidget.test.jsx  ConsentToggle.test.jsx  CountrySelector.test.jsx  ElectionTimeline.test.jsx  FeedbackForm.test.jsx  Footer.test.jsx  (+15 more)
scripts/: check-env.sh  smoke-test.sh
(+40 files in other folders)
